# Laboratorio-3

./: CMakeLists.txt  Escena  Escena.cpp  ejemplo.cpp  frame.cpp
Escenario/: Escena  Escena.cpp  esc
Escenario/Tested/: Escena.cpp
Laboratorio-3/: Escena  Escena.cpp
Objetos/: CMakeLists.txt  objetos  objetos.cpp
Objetos v1/: objetos  objetos.cpp
funcional/: CMakeLists.txt  Escena  Escena.cpp  Escena1  pool  pool.cpp  pool_ani  pool_ani.cpp
v2.0/funcional/: Escena  Escena.cpp  pool_ani.cpp
